--- a/Employee-Consumer/src/main/resources/application.yml
+++ b/Employee-Consumer/src/main/resources/application.yml
@@ -2,5 +2,4 @@ spring:
   application:
     name: employee-consumer
   config:
-    activate:
-      on-profile: consumer
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8088}
