--- a/Employee-Producer/src/main/resources/application.yml
+++ b/Employee-Producer/src/main/resources/application.yml
@@ -1,3 +1,5 @@
 spring:
   application:
     name: employee-producer
+  config:
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8088}
