--- a/Application-Config/application-gateway.yml
+++ b/Application-Config/application-gateway.yml
@@ -14,7 +14,7 @@ spring:
             postLogger: true
       routes:
         - id: employee-service
-          uri: lb://EMPLOYEE-CONSUMER
+          uri: lb://EMPLOYEE-PRODUCER
           predicates:
             - Path=/employee
           filters:
