Gateway 테스를 위한 백엔드와 필터 변경

--- a/Application-Config/application-gateway.yml
+++ b/Application-Config/application-gateway.yml
@@ -13,14 +13,14 @@ spring:
             preLogger: true
             postLogger: true
       routes:
-        - id: employee-service
-          uri: lb://EMPLOYEE-PRODUCER
+        - id: gateway-service
+          uri: lb://GATEWAY-SERVICE
           predicates:
-            - Path=/employee
+            - Path=/gateway
           filters:
-            - name: EmployeeFilter
+            - name: GatewayServiceFilter
               args:
-                baseMessage: Employee Filter
+                baseMessage: Gateway Filter
                 preLogger: true
                 postLogger: true
 
