Spring-Gateway 를 위한 Maven 멀티 프로젝트 설정.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>Eureka-Server</module>
 		<module>Employee-Consumer</module>
 		<module>Employee-Producer</module>
+		<module>Spring-Gateway</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
