라우트 URI를 http 로 변경

--- a/Application-Config/application-gateway.yml
+++ b/Application-Config/application-gateway.yml
@@ -14,7 +14,7 @@ spring:
             postLogger: true
       routes:
         - id: gateway-service
-          uri: lb://GATEWAY-SERVICE
+          uri: http://localhost:9093
           predicates:
             - Path=/gateway/**
           filters:
