--- a/Application-Config/application-gateway.yml
+++ b/Application-Config/application-gateway.yml
@@ -14,7 +14,7 @@ spring:
             postLogger: true
       routes:
         - id: gateway-service
-          uri: lb:/GATEWAY-SERVICE
+          uri: lb://GATEWAY-SERVICE
           predicates:
             - Path=/gateway/**
           filters:
