라우트 경로를 수정.

--- a/Application-Config/application-gateway.yml
+++ b/Application-Config/application-gateway.yml
@@ -14,9 +14,9 @@ spring:
             postLogger: true
       routes:
         - id: gateway-service
-          uri: lb://GATEWAY-SERVICE
+          uri: lb://EMPLOYEE-PRODUCER
           predicates:
-            - Path=/gateway/**
+            - Path=/employee/**
           filters:
             - name: GatewayServiceFilter
               args:
