--- a/Application-Config/application.yml
+++ b/Application-Config/application.yml
@@ -34,6 +34,11 @@ management:
       exposure:
         include: "refresh"
 
+#-- Spring Cloud 2.x above, usging cloud loadbalancer
+ribbon:
+  eureka:
+    enabled: false
+
 #spring:
 #  profiles:
 #    include: eureka
@@ -71,7 +76,3 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_URL:http://admin:admin@${employee.appconfig.peer1-address}/eureka}, ${EUREKA_URL:http://admin:admin@${employee.appconfig.peer2-address}/eureka}
     enabled: true
-      
-ribbon:
-  eureka:
-    enabled: false
