--- a/Spring-OpenFeign/src/main/resources/application.yml
+++ b/Spring-OpenFeign/src/main/resources/application.yml
@@ -1,18 +1,3 @@
 spring:
-  application:
-    name: spring-openfeign
-
-eureka:
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-  client:
-    service-url:
-      defaultZone: ${EUREKA_URL:http://admin:admin@127.0.0.1:8761/eureka}
-    enabled: true
-
-ribbon:
-  eureka:
-    enabled: false
-    
-server:
-  port: 9050
+  config:
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8088}
