--- a/Spring-OpenFeign/pom.xml
+++ b/Spring-OpenFeign/pom.xml
@@ -24,11 +24,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency><!--
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
