--- a/Eureka-Server/pom.xml
+++ b/Eureka-Server/pom.xml
@@ -31,7 +31,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>uereka-server</finalName>
+		<finalName>eureka-server</finalName>
 	</build>
 
 </project>
